--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "angular-quickstart",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.9.1"
+  },
+  "private": true,
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "build": "tsc -p src/",
